--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -1,5 +1,10 @@
 body {
-    margin: 0;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: var(--main-app-color);
+  overflow-y: hidden;
 }
 
 h1,
@@ -8,16 +13,17 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
 }
 
 img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
