--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,3 +23,4 @@
 @import './apps/mail/cmps/mail-list.css';
 @import './apps/mail/cmps/main-filter.css';
 @import './apps/mail/cmps/mail-compose.css';
+@import './apps/mail/cmps/mail-menu.css';
