--- a/assets/css/apps/mail/cmps/mail-compose.css
+++ b/assets/css/apps/mail/cmps/mail-compose.css
@@ -1,37 +1,95 @@
-.mail-compose-modal{
-position: absolute;
-bottom: 10px;
-right: 20px;
-background-color: rgba(0,0,0,.5);
-min-width: 461px;
-min-height: 500px;
+.mail-compose-modal {
+  position: absolute;
+  bottom: 0px;
+  right: 60px;
+  min-width: 461px;
+  min-height: 500px;
+  box-shadow: 0 0 10px rgba(71, 90, 122, 0.5);
+  background-color: var(--email-list-color);
 }
 
-input{
+input {
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+}
+
+textarea {
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 300px;
+}
+
+.mail-compose-recipients {
+  padding: 10px;
+  border-bottom: 1px solid var(--border-line-color);
+}
+
+.mail-compose-subject {
+  padding: 10px;
+  border-bottom: 1px solid var(--border-line-color);
+}
+
+.mail-compose-body {
+  padding: 10px;
+  border-bottom: 1px solid var(--border-line-color);
+  border: none;
+  outline: none;
+  resize: none;
+}
+
+.compose-head {
+  background-color: var(--compose-head-color);
+  color: var(--new-message-color);
+  height: 40px;
+  align-items: center;
+  padding-inline: 10px;
+  font-size: 0.875rem;
+  font-weight: 700;
+}
+
+.send-btn {
+  background-color: var(--send-btn-color);
+  width: 105px;
+  height: 36px;
+  border-radius: 2em;
+  color: var(--send-btn-text-color);
+  font-size: 0.875rem;
+  font-weight: 700;
+  border: none;
+  margin-inline: 10px;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.3);
+  transition: background-color 0.2s ease-out, box-shadow 0.2s ease-out;
+}
+
+.send-btn:hover {
+    background-color: #0069d9;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+    cursor: pointer;
+}
+
+.compose-btn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 143px;
+    height: 56px;
+    padding: 0 24px;
+    border-radius: 1em;
     border: none;
-    outline: none;
-    width: 100%;
-    height: 100%;
-}
-
-textarea{
-    border: none;
-    outline: none;
-    width: 100%;
-    height: 300px;
-}
-
-.mail-compose-recipients{
-    padding: 10px;
-    border-bottom: 1px solid #e0e0e0;
-}
-
-.mail-compose-subject{
-    padding: 10px;
-    border-bottom: 1px solid #e0e0e0;
-}
-
-.mail-compose-body{
-    padding: 10px;
-    border-bottom: 1px solid #e0e0e0;
-}
+    background-color: var(--compose-btn-color);
+    color: var(--compose-btn-text-color);
+    font-size: .875rem;
+    font-weight: 600;
+    box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3), 0 4px 8px 3px rgba(60, 64, 67, 0.15);
+    transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+  }
+  
+  .compose-btn:hover {
+    box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3), 0 8px 16px 6px rgba(60, 64, 67, 0.15);
+  }
+  
