--- a/assets/css/apps/mail/cmps/mail-list.css
+++ b/assets/css/apps/mail/cmps/mail-list.css
@@ -3,8 +3,21 @@
   border-radius: 15px;
 }
 
-li{
-    list-style: none;
-    height: 20px;
-    padding-block: 10px;
+ul {
+  padding-inline: 0px;
+}
+
+li {
+  list-style: none;
+  height: 20px;
+  padding-block: 10px;
+  padding-inline: 20px;
+  cursor: pointer;
+  border-bottom: 1px solid var(--border-line-color);
+  background-color: var(--compose-head-color);
+}
+
+li:hover {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
+    0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1);
 }
