--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -1,27 +1,34 @@
 .app-header {
   background-color: var(--main-app-color);
-padding: 10px 30px;
+  padding: 10px 30px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  height: 40px;
 }
 
 nav a {
   margin-inline: 10px;
 }
 
-.search-bar{
-flex-grow: 1;
-padding-inline-start: 30px;
-padding-inline-end: 30px;
+.search-bar {
+  flex-grow: 1;
+  padding-inline-start: 30px;
+  padding-inline-end: 30px;
+  width: 100%;
 }
 
 .search-bar input {
   height: 46px;
-width: 100%;
+  width: 100%;
   padding: 0;
   border: 0;
   background-color: var(--search-bar-color);
   border-radius: 10px;
   padding-inline-start: 20px;
+}
+
+.app-header img{
+  object-fit: contain;
+  width: 109px;
 }
