--- a/assets/css/basics/helpers.css
+++ b/assets/css/basics/helpers.css
@@ -6,6 +6,13 @@
     flex-direction: column;
 }
 
+.row {
+    flex-direction: row;
+}
+
+.wrap{
+    flex-wrap: wrap;
+}
 .justify-center {
     justify-content: center;
 }
