--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,8 @@
 /* @import './apps/note/views/note-index.css'; */
 
 @import './apps/mail/views/mail-index.css';
+@import './apps/note/views/note-index.css';
+
 
 /* Cmps */
 
@@ -24,3 +26,6 @@
 @import './apps/mail/cmps/main-filter.css';
 @import './apps/mail/cmps/mail-compose.css';
 @import './apps/mail/cmps/mail-menu.css';
+
+@import './apps/note/cmps/note-list.css';
+@import './apps/note/cmps/note-add.css';
