--- a/assets/css/apps/note/cmps/note-list.css
+++ b/assets/css/apps/note/cmps/note-list.css
@@ -1,13 +1,47 @@
  /* note list */
 
- .note-list .flex{
-    width: 60vw;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 15%;
- }
+ .note-list li {
+    background: #ffffff;
+    width: 240px;
+    height: fit-content;
+    border-radius: 7px;
+    box-shadow: 0 2px 5px rgb(175, 175, 175);
+    padding: 10px;
+    margin: 16px;
+    float: left;
+    margin-right: 0;
+  }
 
- .flex{
-    flex-direction: row;
-    flex-wrap: wrap;
- }
+  .note {
+    background: #ffffff;
+    width: 240px;
+    border-radius: 7px;
+    box-shadow: 0 2px 5px rgb(175, 175, 175);
+    padding: 10px;
+    margin: 16px;
+    float: left;
+    margin-right: 0;
+  }
+  
+  .note h1 {
+    font-size: 1rem;
+    margin-bottom: 6px;
+  }
+  
+  .note p {
+    font-size: 1.125rem;
+    color: #6f212b;
+    margin-bottom: 10px;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
+  
+  .note button {
+    position: relative;
+    float: right;
+    color: #f88651;
+    border: none;
+    background: none;
+    cursor: pointer;
+    outline: none;
+  }
