--- a/assets/css/apps/note/cmps/note-add.css
+++ b/assets/css/apps/note/cmps/note-add.css
@@ -1,38 +1,37 @@
-form {
-    position: relative;
-    width: 600px;
-    margin: 32px auto 50px auto;
-    background: #fff;
-    padding: 7px;
-    border-radius: 7px;
-    box-shadow: 0 1px 7px rgb(128, 128, 128);
-  }
-  
-  form input {
-    width: 100%;
-    border: none;
-    padding: 4px 10px;
-    margin-bottom: 20px;
-    outline: none;
-    font-size: 1rem;
-    resize: none;
-  }
+.note-form {
+  position: relative;
+  width: 600px;
+  margin: 32px auto 50px auto;
+  background: #fff;
+  padding: 7px;
+  border-radius: 7px;
+  box-shadow: 0 1px 7px rgb(128, 128, 128);
+}
 
-  form button{
-    box-sizing: border-box;
-    color: rgba(0,0,0,.87);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    letter-spacing: .01785714em;
-    font-family: "Google Sans",Roboto,Arial,sans-serif;
-    font-size: .875rem;
-    font-weight: 500;
-    line-height: 1.25rem;
-    height: 36px;
-    padding: 8px 24px;
-    border-radius: 4px;
-  }
-  
+.note-form input {
+  width: 100%;
+  border: none;
+  padding: 4px 10px;
+  margin-bottom: 20px;
+  outline: none;
+  font-size: 1rem;
+  resize: none;
+}
+
+.note-form button {
+  box-sizing: border-box;
+  color: rgba(0, 0, 0, 0.87);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  letter-spacing: 0.01785714em;
+  font-family: 'Google Sans', Roboto, Arial, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 1.25rem;
+  height: 36px;
+  padding: 8px 24px;
+  border-radius: 4px;
+}
+
 /* ON NEW NOTE INPUT CLICK*/
- 
