--- a/assets/css/apps/mail/cmps/mail-compose.css
+++ b/assets/css/apps/mail/cmps/mail-compose.css
@@ -87,6 +87,7 @@ textarea {
     box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3), 0 4px 8px 3px rgba(60, 64, 67, 0.15);
     transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
+    margin-block-end: 15px;
   }
   
   .compose-btn:hover {
