--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,3 +29,4 @@
 @import './apps/mail/cmps/mail-expand.css';
 @import './apps/note/cmps/note-list.css';
 @import './apps/note/cmps/note-add.css';
+@import './apps/mail/cmps/mail-filter.css';
