added CSS code for notes and form, aswell as functional improvments in the text note type

--- a/assets/css/apps/note/cmps/note-add.css
+++ b/assets/css/apps/note/cmps/note-add.css
@@ -1,4 +1,4 @@
-form {
+.note-form {
     position: relative;
     width: 600px;
     margin: 32px auto 50px auto;
@@ -8,9 +8,11 @@ form {
     box-shadow: 0 1px 7px rgb(128, 128, 128);
   }
   
-  form input {
-    width: 100%;
-    border: none;
+  .note-form  input {
+    margin-left: 5px;
+    width: 85%;
+    border: 1px solid black;
+    border-radius: 7px;
     padding: 4px 10px;
     margin-bottom: 20px;
     outline: none;
@@ -18,21 +20,41 @@ form {
     resize: none;
   }
 
-  form button{
+  .note-form  button{
     box-sizing: border-box;
     color: rgba(0,0,0,.87);
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    letter-spacing: .01785714em;
     font-family: "Google Sans",Roboto,Arial,sans-serif;
     font-size: .875rem;
     font-weight: 500;
-    line-height: 1.25rem;
+    line-height: 1rem;
     height: 36px;
     padding: 8px 24px;
     border-radius: 4px;
   }
   
+
+  .select-type{
+    box-sizing: border-box;
+    color: rgba(0,0,0,.87);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-family: "Google Sans",Roboto,Arial,sans-serif;
+    font-size: .875rem;
+    font-weight: 500;
+    line-height: 1rem;
+    height: 36px;
+    padding: 8px 24px;
+    border-radius: 4px;
+
+
+
+  }
+
+
+
 /* ON NEW NOTE INPUT CLICK*/
  
