--- a/assets/css/apps/mail/cmps/mail-compose.css
+++ b/assets/css/apps/mail/cmps/mail-compose.css
@@ -8,14 +8,14 @@
   background-color: var(--email-list-color);
 }
 
-input {
+.mail-compose-modal input {
   border: none;
   outline: none;
   width: 100%;
   height: 100%;
 }
 
-textarea {
+.mail-compose-modal textarea {
   border: none;
   outline: none;
   width: 100%;
