--- a/assets/css/apps/mail/cmps/mail-list.css
+++ b/assets/css/apps/mail/cmps/mail-list.css
@@ -7,7 +7,7 @@ ul {
   padding-inline: 0px;
 }
 
-li {
+.mail-list li {
   list-style: none;
   height: 20px;
   padding-block: 10px;
@@ -17,7 +17,7 @@ li {
   background-color: var(--compose-head-color);
 }
 
-li:hover {
+.mail-list li:hover {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1),
     0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1);
 }
