--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,3 +30,4 @@
 @import './apps/note/cmps/note-list.css';
 @import './apps/note/cmps/note-add.css';
 @import './apps/mail/cmps/mail-filter.css';
+@import './apps/note/cmps/note-edit.css';
