--- a/assets/css/apps/mail/cmps/mail-filter.css
+++ b/assets/css/apps/mail/cmps/mail-filter.css
@@ -7,3 +7,9 @@
   padding: 10px 20px;
   max-width: fit-content;
 }
+
+.mail-filter option{
+display: flex;
+justify-content: center;
+align-items: center;
+}
