--- a/assets/css/apps/mail/cmps/mail-list.css
+++ b/assets/css/apps/mail/cmps/mail-list.css
@@ -15,6 +15,7 @@ ul {
   cursor: pointer;
   border-bottom: 1px solid var(--border-line-color);
   background-color: var(--compose-head-color);
+  margin-block-end: 1px;
 }
 
 .mail-list li:hover {
