--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -9,6 +9,17 @@
 
 nav a {
   margin-inline: 10px;
+  padding: 10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  font-size: 1.3em;
+}
+
+nav a:hover {
+  background-color: #c5c5c59b;
+  padding: 10px;
+  border-radius: 1em;
+  transition: 0.5s;
 }
 
 .search-bar {
