--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,3 +30,7 @@
 @import './apps/note/cmps/note-add.css';
 @import './apps/mail/cmps/mail-filter.css';
 @import './apps/note/cmps/note-edit.css';
+@import './apps/mail/cmps/mail-hover-icons.css';
+@import './apps/mail/cmps/mail-details.css';
+@import './cmps/home.css';
+@import './cmps/about.css';
